# mcp-mql5-rag

./: LICENSE  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  test_server.py
src/: mql5_mcp_server.py
